--- a/account_invoice_installments/i18n/ar.po
+++ b/account_invoice_installments/i18n/ar.po
@@ -1,13 +1,13 @@
-# Translation file for account_invoice_installments module
-# Copyright (C) 2024 Your Company
-# This file is distributed under the same license as the account_invoice_installments package.
+# Translation of Odoo Server.
+# This file contains the translation of the following modules:
+# 	* account_invoice_installments
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: account_invoice_installments 18.0.1.0.0\n"
+"Project-Id-Version: Odoo Server 18.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-01 12:00+0000\n"
-"PO-Revision-Date: 2024-01-01 12:00+0000\n"
+"POT-Creation-Date: 2025-11-10 00:38+0000\n"
+"PO-Revision-Date: 2025-11-10 00:38+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ar\n"
@@ -17,56 +17,130 @@ msgstr ""
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
 
 #. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__payment_type
-msgid "Payment Plan"
-msgstr "خطة الدفع"
+#: model:ir.ui.menu,name:account_invoice_installments.menu_companies
+msgid "Companies"
+msgstr "الشركات"
 
 #. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__order_type
-msgid "Order Type"
-msgstr "نوع الطلب"
+#: model:ir.ui.menu,name:account_invoice_installments.menu_customers
+msgid "Customers"
+msgstr "العملاء"
 
 #. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__payment_type
-#: selection:sale.order,payment_type:0
-msgid "Immediate Payment"
-msgstr "دفع فوري"
-
-#. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__payment_type
-#: selection:sale.order,payment_type:0
-msgid "Regular Installments"
-msgstr "أقساط منتظمة"
-
-#. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__payment_type
-#: selection:sale.order,payment_type:0
-msgid "Irregular Installments"
-msgstr "أقساط غير منتظمة"
-
-#. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__order_type
-#: selection:sale.order,order_type:0
-msgid "Standard Sale Order"
-msgstr "طلب البيع"
-
-#. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__order_type
-#: selection:sale.order,order_type:0
-msgid "Warehouse Sale Order"
-msgstr "طلب بيع مستودع"
-
-#. module: account_invoice_installments
-#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__order_type
-#: selection:sale.order,order_type:0
+#: model:ir.actions.act_window,name:account_invoice_installments.action_wholesale_orders
+#: model:ir.model.fields.selection,name:account_invoice_installments.selection__sale_order__order_type__wholesale
+#: model:ir.ui.menu,name:account_invoice_installments.menu_wholesale_orders
+#: model_terms:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
 msgid "External Sales Order"
 msgstr "طلب بيع خارجي"
 
 #. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_sales_root
+msgid "FRTZ"
+msgstr "حركات الجمعية"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+#: model:ir.model.fields.selection,name:account_invoice_installments.selection__sale_order__payment_type__immediate
+msgid "Immediate Payment"
+msgstr "دفع فوري"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+#: model:ir.model.fields.selection,name:account_invoice_installments.selection__sale_order__payment_type__irregular
+msgid "Irregular Installments"
+msgstr "أقساط غير منتظمة"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+msgid "New"
+msgstr "جديد"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+msgid "New Custom Sale Order"
+msgstr "طلب بيع مستودع جديد"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+msgid "New Standard Sale Order"
+msgstr "طلب بيع جديد"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+msgid "New Subscription Order"
+msgstr "طلب بيع خدمة جديد"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+msgid "New Wholesale Order"
+msgstr "طلب بيع خارجي جديد"
+
+#. module: account_invoice_installments
 #: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__order_type
-#: selection:sale.order,order_type:0
-msgid "Service Sales Order"
-msgstr "طلب بيع خدمة"
+#: model_terms:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
+msgid "Order Type"
+msgstr "نوع الطلب"
+
+#. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_partner_parent
+msgid "Partners"
+msgstr "الشركاء"
+
+#. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_standard_orders2
+msgid "Payment Request"
+msgstr "طلب الدفع"
+
+#. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_payment_term
+msgid "Payment Term"
+msgstr "شروط الدفع"
+
+#. module: account_invoice_installments
+#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__payment_type
+#: model_terms:ir.ui.view,arch_db:account_invoice_installments.sale_order_form_installments
+msgid "Payment Type"
+msgstr "نوع خطة الدفع"
+
+#. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_pricelist
+msgid "Price List"
+msgstr "قائمة الأسعار"
+
+#. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_product_parent
+msgid "Product"
+msgstr "المنتج"
+
+#. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_product_variants
+msgid "Product Variants"
+msgstr "متغيرات المنتج"
+
+#. module: account_invoice_installments
+#: model:ir.ui.menu,name:account_invoice_installments.menu_products
+msgid "Products"
+msgstr "المنتجات"
+
+#. module: account_invoice_installments
+#. odoo-python
+#: code:addons/account_invoice_installments/models/sales_order.py:0
+#: model:ir.model.fields.selection,name:account_invoice_installments.selection__sale_order__payment_type__regular
+msgid "Regular Installments"
+msgstr "أقساط منتظمة"
+
+#. module: account_invoice_installments
+#: model:ir.model,name:account_invoice_installments.model_sale_order
+msgid "Sales Order"
+msgstr "أمر البيع"
 
 #. module: account_invoice_installments
 #: model:ir.model.fields,help:account_invoice_installments.field_sale_order__payment_type
@@ -79,131 +153,31 @@ msgid "Select the type of sale order"
 msgstr "اختر نوع طلب البيع"
 
 #. module: account_invoice_installments
-#: model:ir.actions.act_window,name:account_invoice_installments.action_create_standard
-msgid "New Standard Sale Order"
-msgstr "طلب بيع جديد"
-
-#. module: account_invoice_installments
-#: model:ir.actions.act_window,name:account_invoice_installments.action_create_custom
-msgid "New Custom Sale Order"
-msgstr "طلب بيع مستودع جديد"
-
-#. module: account_invoice_installments
-#: model:ir.actions.act_window,name:account_invoice_installments.action_create_wholesale
-msgid "New Wholesale Order"
-msgstr "طلب بيع خارجي جديد"
-
-#. module: account_invoice_installments
-#: model:ir.actions.act_window,name:account_invoice_installments.action_create_subscription
-msgid "New Subscription Order"
-msgstr "طلب بيع خدمة جديد"
-
-#. module: account_invoice_installments
-#: model:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
-msgid "Standard Sale Order"
-msgstr "طلب البيع"
-
-#. module: account_invoice_installments
-#: model:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
-msgid "Warehouse Sale Order"
-msgstr "طلب بيع مستودع"
-
-#. module: account_invoice_installments
-#: model:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
-msgid "External Sales Order"
-msgstr "طلب بيع خارجي"
-
-#. module: account_invoice_installments
-#: model:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
+#: model:ir.actions.act_window,name:account_invoice_installments.action_subscription_orders
+#: model:ir.model.fields.selection,name:account_invoice_installments.selection__sale_order__order_type__subscription
+#: model:ir.ui.menu,name:account_invoice_installments.menu_subscription_orders
+#: model_terms:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
 msgid "Service Sales Order"
 msgstr "طلب بيع خدمة"
 
 #. module: account_invoice_installments
 #: model:ir.actions.act_window,name:account_invoice_installments.action_standard_orders
+#: model:ir.model.fields.selection,name:account_invoice_installments.selection__sale_order__order_type__standard
+#: model:ir.ui.menu,name:account_invoice_installments.menu_standard_orders
+#: model_terms:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
 msgid "Standard Sale Order"
 msgstr "طلب البيع"
+
+#. module: account_invoice_installments
+#: model:ir.model.fields,field_description:account_invoice_installments.field_sale_order__vendor_name_id
+#: model_terms:ir.ui.view,arch_db:account_invoice_installments.sale_order_form_installments
+msgid "Vendor Name"
+msgstr "اسم المورد"
 
 #. module: account_invoice_installments
 #: model:ir.actions.act_window,name:account_invoice_installments.action_custom_orders
-msgid "Warehouse Sale Order"
-msgstr "طلب بيع مستودع"
-
-#. module: account_invoice_installments
-#: model:ir.actions.act_window,name:account_invoice_installments.action_wholesale_orders
-msgid "External Sales Order"
-msgstr "طلب بيع خارجي"
-
-#. module: account_invoice_installments
-#: model:ir.actions.act_window,name:account_invoice_installments.action_subscription_orders
-msgid "Service Sales Order"
-msgstr "طلب بيع خدمة"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_sales_root
-msgid "FRTZ"
-msgstr "حركات الجمعية"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_standard_orders
-msgid "Standard Sale Order"
-msgstr "طلب البيع"
-
-#. module: account_invoice_installments
+#: model:ir.model.fields.selection,name:account_invoice_installments.selection__sale_order__order_type__custom
 #: model:ir.ui.menu,name:account_invoice_installments.menu_custom_orders
+#: model_terms:ir.ui.view,arch_db:account_invoice_installments.view_sales_order_filter_custom
 msgid "Warehouse Sale Order"
 msgstr "طلب بيع مستودع"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_wholesale_orders
-msgid "External Sales Order"
-msgstr "طلب بيع خارجي"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_subscription_orders
-msgid "Service Sales Order"
-msgstr "طلب بيع خدمة"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_standard_orders2
-msgid "Payment Request"
-msgstr "طلب الدفع"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_product_parent
-msgid "Product"
-msgstr "المنتج"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_products
-msgid "Products"
-msgstr "المنتجات"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_product_variants
-msgid "Product Variants"
-msgstr "متغيرات المنتج"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_pricelist
-msgid "Price List"
-msgstr "قائمة الأسعار"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_payment_term
-msgid "Payment Term"
-msgstr "شروط الدفع"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_partner_parent
-msgid "Partners"
-msgstr "الشركاء"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_customers
-msgid "Customers"
-msgstr "العملاء"
-
-#. module: account_invoice_installments
-#: model:ir.ui.menu,name:account_invoice_installments.menu_companies
-msgid "Companies"
-msgstr "الشركات"
